--- a/Environment.css
+++ b/Environment.css
@@ -4,7 +4,82 @@
 
 #title {
     position: absolute;
-    bottom: 300px;
-    color: red
+    bottom: 475px;
+    left: 425px;
+    color: black;
+    font-size: 1.75cm
     /* top:100px */
+}
+#buttons {
+    position: absolute;
+    bottom: 700px;
+    left: 200px;
+    background-color: black;
+}    
+#stories_btn:hover {color: blue}
+#stories_btn {
+    overflow: hidden;
+    background-color: white;
+    border: none;
+    color: black ;
+    padding: 20px 50px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: absolute;
+    left: -100px
+}
+
+#wild_btn:hover {color: blue}
+#wild_btn {
+    overflow: hidden;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 20px 50px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: absolute;
+    left: 200px
+}
+
+#suggest_btn:hover {color:blue}
+#suggest_btn {
+    overflow: hidden;
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 20px 50px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: absolute;
+    left: 500px
+}
+    
+#about_btn:hover {color:blue}
+#about_btn {
+    overflow: hidden;
+    background-color:white ;
+    border: none;
+    color: black;
+    padding: 20px 50px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: absolute;
+    left: 800px
 }
