--- a/Environment.css
+++ b/Environment.css
@@ -4,7 +4,7 @@
 
 #title {
     position: absolute;
-    bottom: 475px;
+    bottom: 750px;
     left: 425px;
     color: black;
     font-size: 1.75cm
@@ -19,7 +19,7 @@
 #stories_btn:hover {color: blue}
 #stories_btn {
     overflow: hidden;
-    background-color: white;
+    background-color: transparent;
     border: none;
     color: black ;
     padding: 20px 50px;
@@ -36,7 +36,7 @@
 #wild_btn:hover {color: blue}
 #wild_btn {
     overflow: hidden;
-    background-color: white;
+    background-color: transparent;
     border: none;
     color: black;
     padding: 20px 50px;
@@ -53,7 +53,7 @@
 #suggest_btn:hover {color:blue}
 #suggest_btn {
     overflow: hidden;
-    background-color: white;
+    background-color: transparent;
     border: none;
     color: black;
     padding: 20px 50px;
@@ -70,7 +70,7 @@
 #about_btn:hover {color:blue}
 #about_btn {
     overflow: hidden;
-    background-color:white ;
+    background-color: transparent ;
     border: none;
     color: black;
     padding: 20px 50px;
