--- a/stories.css
+++ b/stories.css
@@ -4,6 +4,47 @@
 
 #txt {
     position: absolute;
-    bottom: 400px;
+    bottom: 500px;
+    color: black
+}
+#pollution_img {
+    position: relative;
+}
+
+
+#pollution_txt {
+    position: absolute;
+    bottom: 200px;
+    color: white
+}
+#elephant_img {
+    position: relative;
+}
+
+
+#elephant_txt {
+    position: absolute;
+    bottom: -200px;
+    color: black
+}
+
+#Samoa_img {
+    position: relative;
+}
+
+
+#Samoa_txt {
+    position: absolute;
+    bottom: -700px;
+    color: black
+}
+#Rangers_img {
+    position: relative;
+}
+
+
+#Rangers_txt {
+    position: absolute;
+    bottom: -1300px;
     color: black
 }
