--- a/WildLife.css
+++ b/WildLife.css
@@ -1,10 +1,10 @@
-#panda_btn:hover {color: blue}
+#panda_btn:hover {color: white}
 #panda_btn {
     overflow: hidden;
     background-color: green;
     border: none;
     color: black ;
-    padding: 10px 100px;
+    padding: 10px 50px;
     text-align: right;
     text-decoration: none;
     display: inline-block;
@@ -12,4 +12,22 @@
     margin: 4px 2px;
     cursor: pointer;
     position: absolute;
-    left: -100px;
+    left: 50px;
+}
+#tiger_btn:hover {color: orange}
+
+ #tiger_btn {
+    overflow: hidden;
+    background-color: green;
+    border: none;
+    color: black ;
+    padding: 10px 70px;
+    text-align: right;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: absolute;
+    left: 400px; 
+ }
