--- a/WildLife.css
+++ b/WildLife.css
@@ -2,93 +2,30 @@ body {
    background-color: whitesmoke
 }
 
-#panda_btn:hover {color: white}
-#panda_btn {
-    overflow: hidden;
-    background-color: black;
-    border: none;
-    color: white ;
-    padding: 10px 50px;
-    text-align: right;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    margin: 4px 2px;
-    cursor: pointer;
-    position: absolute;
-    left: 150px;
-    top: 100px
-}
 
 #panda_pic{
    position: relative;
 }
-#tiger_btn:hover {color: orange}
 
- #tiger_btn {
-    overflow: hidden;
-    background-color: black;
-    border: none;
-    color: white ;
-    padding: 10px 70px;
-    text-align: right;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    margin: 4px 2px;
-    cursor: pointer;
-    position: absolute;
-    left: 700px; 
-    top: 110px;
- }
+
+
+
+ 
  #tiger_pic {
     position: relative;
-    top: -340px
+    top: -340px;
+    left: 50px
+    
  }
 
- #elephatn_btn:hover {color: grey}
-
- #elephant_btn {
-    overflow: hidden;
-    background-color: black;
-    border: none;
-    color: white ;
-    padding: 10px 70px;
-    text-align: right;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    margin: 4px 2px;
-    cursor: pointer;
-    position: absolute;
-    top: 150px;
-    left: 1050px; 
- }
+ 
  #elephant_pic {
    position: relative;
-   top: -650px;
-   left: 1000px;
+   top: -680px;
+   left: 1100px;
  }
 #shark_pic {
    position: relative;
-   left: -403px;
-   top: -60px
+   left: -435px;
+   top: -10px
 }
- #shark_btn:hover {color: blue}
-
- #shark_btn {
-    overflow: hidden;
-    background-color: black;
-    border: none;
-    color: white ;
-    padding: 10px 70px;
-    text-align: right;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    margin: 4px 2px;
-    cursor: pointer;
-    position: absolute;
-    left: 600px; 
-    top: 630px
- }
