--- a/stories.css
+++ b/stories.css
@@ -1,3 +1,7 @@
+body {
+    background-color: whitesmoke;
+  }
+
 #img {
     position: relative;
 }
@@ -5,16 +9,136 @@
 #txt1 {
     position: absolute;
     bottom: 250px;
-    color:white;
-    font-size: 35px
+    font-size: 30px;
+    color: white;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4);
+    border: 3px solid #f1f1f1;
+    top: 50%;
+    left: 23%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: left;
+    height: 18%;
+    width: 45%
 }
 
 #txt2 {
     position: absolute;
     bottom: -55px;
     color:white;
-    font-size: 35px
-}
+    font-size: 30px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4);
+    border: 3px solid #f1f1f1;
+    top: 50%;   
+    left: 75%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: left;
+    height: 18%;
+    width: 45%
+} 
+
+#txt3 {
+    position: absolute;
+    bottom: -55px;
+    color:white;
+    font-size: 30px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4);
+    border: 3px solid #f1f1f1;
+    top: 100%;   
+    left: 23%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: left;
+    height: 13%;
+    width: 45%
+} 
+
+#txt4 {
+    position: absolute;
+    bottom: -55px;
+    color:white;
+    font-size: 30px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4);
+    border: 3px solid #f1f1f1;
+    top: 100%;   
+    left: 75%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: left;
+    height: 18%;
+    width: 45%
+} 
+
+#txt5 {
+    position: absolute;
+    bottom: -55px;
+    color:white;
+    font-size: 30px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4);
+    border: 3px solid #f1f1f1;
+    top: 150%;   
+    left: 23%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: left;
+    height: 22%;
+    width: 45%
+} 
+
+#txt6 {
+    position: absolute;
+    bottom: -55px;
+    color:white;
+    font-size: 30px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.4);
+    border: 3px solid #f1f1f1;
+    top: 150%;   
+    left: 75%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 50%;
+    padding: 20px;
+    text-align: left;
+    height: 18%;
+    width: 45%
+} 
+
+#n-txt {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -0%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: left;
+    font-size: 300%;   
+  }
+
+
+
 
 #n {
     font-size: 150%;
@@ -33,23 +157,7 @@
     background-size: cover;
 
 }
-
-#n-txt {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    color: white;
-    font-weight: bold;
-    font-size: 300%;
-    border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    padding: 20px;
-    text-align: left;
-  }
+   
 
 #image {
     position: relative;
@@ -108,7 +216,7 @@
     margin: 4px 2px;
     cursor: pointer;
     position: absolute;
-    left: 200px
+    left:200px
 }
 
 #suggest_btn:hover {color:blue}
@@ -173,6 +281,42 @@ body, html {
   
   /* Position text in the middle of the page/image */
   
+  * {
+    box-sizing: border-box;
+  }
+  
+  .img-line1 {
+    float: left;
+    width: 50%;
+    padding: 5px;
+  }
+    /* Clearfix (clear floats) */
+  .img-line1::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
+  .img-line2 {
+    float: left;
+    width: 50%;
+    padding: 5px;
+  }
+    /* Clearfix (clear floats) */
+  .img-line2::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
-
+  .img-line3 {
+    float: left;
+    width: 50%;
+    padding: 5px;
+  }
+    /* Clearfix (clear floats) */
+  .img-line3::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
