--- a/Tiger.css
+++ b/Tiger.css
@@ -6,15 +6,15 @@
   }
   
   body {
-    background-color: whitesmoke
+    background-color: whitesmoke;
  }
   
   #center-img {
-      position: relative;
+      
       left: 170px;
   }
   #right-img {
-      position: relative;
+     
       left: 300px;
       
   }
@@ -23,7 +23,7 @@
   }
 
   #info_img {
-      position: relative;
+      
       left: 200px
   }
 
