--- a/Environment.css
+++ b/Environment.css
@@ -7,8 +7,8 @@
     bottom: 690px;
     left: 385px;
     color: black;
-    font-size: 1.75cm
-    /* top:100px */
+    font-size: 1.75cm;
+    top: 100px; 
 }
 
 #buttons {
@@ -22,7 +22,7 @@
     overflow: hidden;
     background-color: transparent;
     border: none;
-    color: black ;
+    color: white ;
     padding: 20px 50px;
     text-align: left;
     text-decoration: none;
@@ -39,7 +39,7 @@
     overflow: hidden;
     background-color: transparent;
     border: none;
-    color: black;
+    color: white;
     padding: 20px 50px;
     text-align: left;
     text-decoration: none;
@@ -56,7 +56,7 @@
     overflow: hidden;
     background-color: transparent;
     border: none;
-    color: black;
+    color: white;
     padding: 20px 50px;
     text-align: left;
     text-decoration: none;
@@ -73,7 +73,7 @@
     overflow: hidden;
     background-color: transparent ;
     border: none;
-    color: black;
+    color: white;
     padding: 20px 50px;
     text-align: left;
     text-decoration: none;
